<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Hiking" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="126dp"
        android:layout_marginTop="131dp"
        android:layout_marginEnd="125dp"
        android:text="@string/hiking_title"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="158dp"
        android:layout_height="122dp"
        android:layout_marginStart="127dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="41dp"
        android:text="@string/hiking_sports"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="244dp"
        android:layout_height="304dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="51dp"
        android:src="@drawable/hiking"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>