<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Biking">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="295dp"
        android:layout_height="262dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="232dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="73dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/biking"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="126dp"
        android:layout_marginTop="131dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="56dp"
        android:text="@string/biking_title"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="158dp"
        android:layout_height="122dp"
        android:layout_marginStart="127dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="42dp"
        android:text="@string/biking_sports"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>