<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".jumping" >

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="126dp"
        android:layout_marginTop="131dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="56dp"
        android:text="@string/jumping_title"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="158dp"
        android:layout_height="122dp"
        android:layout_marginStart="127dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="42dp"
        android:text="@string/jumping_sports"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="199dp"
        android:layout_height="324dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/jumping"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />
</androidx.constraintlayout.widget.ConstraintLayout>